fix slider visible in menu

--- a/css/screen.css
+++ b/css/screen.css
@@ -177,7 +177,6 @@ a:focus {
   border-radius: 5px;   
   background: #C4CCBE;
   outline: none;
-  opacity: 0.7;
   -webkit-transition: .2s;
   transition: opacity .2s;
 
